--- a/src/App.css
+++ b/src/App.css
@@ -89,17 +89,18 @@ body {
 }
 
 .mitad2 {
+  background-color: #FAD9D9;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 180px;
-  margin-left: 30px;
   padding: 30px;
 }
 
 .mitad2 h1 {
+  margin-top: 180px;
+  margin-left: 30px;
   font-size: 2.2em;
   max-width: 100%;
 }
@@ -119,7 +120,6 @@ body {
   .mitad2 {
     width: 100%;
     padding: 10px;
-    margin-top: 80px;
     text-align: center;
   }
 
@@ -131,22 +131,20 @@ body {
     font-size: 0.8em;
   }
 
-  
-.mitad2 h1 {
-  font-size: 1.8em;
-  max-width: 100%;
-}
+  .mitad2 h1 {
+    font-size: 1.8em;
+    max-width: 100%;
+  }
 
-.mitad2 h2 {
-  font-size: 1em;
-  max-width: 100%;
-  margin-bottom: 30px;
-}
+  .mitad2 h2 {
+    font-size: 1em;
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
 
-.mitad2 h3 {
-  font-size: 0.7em;
-  max-width: 100%;
-}
+  .mitad2 h3 {
+    font-size: 0.7em;
+    max-width: 100%;
+  }
 
 }
-
